# gemini-fullstack-langgraph-quickstart

./: README.md
backend/: pyproject.toml
backend/src/agent/: document_processor.py  graph.py  state.py  tools_and_schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: EnhancedWelcomeScreen.tsx  FileUploadDialog.tsx  InputForm.tsx  ModernChatInterface.tsx  PromptTemplates.tsx  ThemeToggle.tsx
frontend/src/components/ui/: dialog.tsx  switch.tsx
frontend/src/contexts/: ThemeContext.tsx
